[project]
name = "robotsim"
version = "0.1.0"
description = "2D robot simulator with Pymunk + Pygame"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.5",
  "pymunk>=7.0",
]

[project.scripts]
robosim = "robosim.main:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robosim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
